--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,133 +1,5 @@
 @import "./modules/_reset.scss";
 @import "./modules/_queries.scss";
 
-body {
-    background-color: #e6e8e6;
-    font-family: 'Montserrat', sans-serif;
-    color: #191919;
-    max-width: 100%;
-    margin: 4em;
-    line-height: 1.5em;
-    
-}
-
-.site-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-h2 {
-    font-family: adobe-caslon-pro, serif;
-    font-weight: 400;
-    font-size: 3em;
-    font-style: normal;
-}
-
-header {
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    margin-top: 8em;
-    margin-bottom: 4em;
-    line-height: 3em;
-    
-}
-
-header h2 {
-    font-family: 'Montserrat', sans-serif;
-    line-height: 1.5em;
-}
-
-input {
-    display: none;
-}
-
-.btn-cards {
-    max-width: 600px;
-    height: 500px;
-    display: flex;
-    transform-style: preserve-3d;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.cards {
-    position: relative;
-    height: 500px;
-    width: 430px;
-    perspective: 1000px;
-    transform-style: preserve-3d;
-}
-
-.cards label {
-    position: absolute;
-    width: 250px;
-    height: 380px;
-    left: 0;
-    right: 0;
-    margin: auto;
-    cursor: pointer;
-    transition: transform 0.55s ease;
-    border-radius: 10px;
-}
-
-.card {
-    background-color: #191919;
-    position: relative;
-    height: 100%;
-    border-radius: 10px;
-    /*padding: 30px 35px;*/
-}
-
-.info {
-    width: 500px;
-}
-
-.info h2 {
-    margin-bottom: 0.5em;
-    margin-top: 1em;
-}
-
-.info h3 {
-    margin-bottom: 1em;
-    font-weight: 700;
-    font-size: 1.5em;
-}
-
-.info p {
-    margin-bottom: 2em;
-}
-
-
-
-#s1:checked~.cards #slide3,
-#s2:checked~.cards #slide1,
-#s3:checked~.cards #slide2 {
-    box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 45%);
-    transform: translate3d(-45%, 0, -120px);
-
-}
-
-#s1:checked~.cards #slide1,
-#s2:checked~.cards #slide2,
-#s3:checked~.cards #slide3 {
-    box-shadow: 0 25px 50px 0 rgba(0, 0, 0, 50%);
-    transform: translate3d(0, 0, 0);
-
-}
-
-#s1:checked~.cards #slide2,
-#s2:checked~.cards #slide3,
-#s3:checked~.cards #slide1 {
-    box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 45%);
-    transform: translate3d(45%, 0, -120px);
-
-}
-
-
-
-
-
-
+@import "./modules/_body.scss";
+@import "./modules/_cardslider.scss";
